# knowledge_gpt

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose-api.yaml  docker-compose.yaml  pyproject.toml
document_store/: pyproject.toml
document_store/document_store/: main.py  parsers.py  texts_to_sub_documents.py
embedder/: Dockerfile  pyproject.toml
embedder/embedder/: main.py
frontend/: Dockerfile  pyproject.toml  requirements.txt  response  response.json
frontend/frontend/: main.py  test.ipynb  test.py
frontend/frontend/components/: sidebar.py
frontend/frontend/utils/: UI.py  chunk_doc.py  document_store.py  embedder.py  llm.py
knowledge_gpt/: Dockerfile  main.py  pdf_display.py  prompts.py  requirements.txt
knowledge_gpt/components/: sidebar.py
knowledge_gpt/knowledge_gpt/: pdf_display.py  streamlit_app.py
knowledge_gpt/knowledge_gpt/components/: sidebar.py
knowledge_gpt/knowledge_gpt/utils/: UI.py  embedder.py  llm.py
knowledge_gpt/notebooks/: experiment.ipynb
knowledge_gpt/utils/: UI.py  chunk_doc.py  embedder.py  expert.py  llm.py  parsers.py
llm/: Dockerfile  pyproject.toml
llm/llm/: main.py
notebooks/: exp.ipynb  instruct_embeddings.ipynb  local_llm.ipynb
tests/: test_utils.py
