[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["aimore <aimorerrd@hotmail.com>"]
readme = "README.md"
packages = [{include = "frontend"}]


[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.252"
streamlit = "^1.25.0"
openai = "^0.27.8"
python-decouple = "^3.8"
docx2txt = "^0.8"
pypdf = "^3.14.0"
httpx = "^0.24.1"
fastapi = "^0.101.0"
ipykernel = "^6.25.1"
python-multipart = "^0.0.6"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
