[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["aimorerrd <aimorerrd@hotmail.com>"]
readme = "README.md"
packages = [{include = "llm"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
