[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["aimorerrd <aimorerrd@hotmail.com>"]
readme = "README.md"
packages = [{include = "llm"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
requests = "^2.31.0"
langchain = "^0.0.260"
transformers = "^4.31.0"
openai = "^0.27.8"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
